--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -31,9 +31,7 @@
             <td th:text="TODO">Blauer Frack</td>
             <td>
                 <a role="button" class="btn btn-info" href="orderdetail.html" th:href="@{/orders/detail/{id}(id=${order.getId()})}" th:text="#{general.details}">Details</a>
-                <!--
-                    <a role="button" class="btn btn-primary" href="pickup.html" th:href="@{/orders/pickup/{id}(id=${order.getOrder().getId()})}" th:if="${order.getOrder().canPickUp()>Zurückgeben</a>
-                -->
+                <a role="button" class="btn btn-primary" href="pickup.html" th:href="@{/orders/pickup/{id}(id=${order.getId()})}" th:if="${order.canPickUp()}" th:text="#{orders.pickup.return}">Zurückgeben</a>
             </td>
         </tr>
         </tbody>
