--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -30,7 +30,7 @@
             <td th:text="${staff.getFirstName()}">Peter</td>
             <td th:text="${staff.getUserName()}">pperters</td>
             <td th:if="${staff.getSkills().isEmpty()}" text="">
-            <td th:unless="${staff.getSkills().isEmpty()}" th:text="${#strings.setJoin(#messages.listMsg(#strings.setPrepend(staff.getServices(), 'orders.service.')), ', ')}">
+            <td th:unless="${staff.getSkills().isEmpty()}" th:text="${#strings.setJoin(#messages.listMsg(#strings.setPrepend(staff.getServicesNames(), 'orders.service.')), ', ')}">
             </td>
             <td>
                 <div class="btn-group">
