--- a/src/main/resources/templates/finance.html
+++ b/src/main/resources/templates/finance.html
@@ -21,15 +21,15 @@
         <tr>
             <th scope="col">ID</th>
 
-            <th scope="col">Datum</th>
+            <th scope="col">Value</th>
 
         </tr>
         </thead>
         <tbody>
         <tr th:each="item: ${finance}">
-            <th scope="row" th:text="${item.id}">1</th>
+            <th scope="row" th:text="${item.Id}">1</th>
 
-            <td th:text="${item.date}">12.01.2019</td>
+            <td th:text="${item.Value}">12.01.2019</td>
         </tr>
         </tbody>
     </table>
