--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -35,7 +35,7 @@
                     </a>
                     <div aria-labelledby="navbarDropdown" class="dropdown-menu">
                         <a class="dropdown-item" href="rooms.html" th:text="#{rooms}" th:href="@{/rooms}">Rooms</a>
-                        <a class="dropdown-item" href="material.html" th:text="#{materials}">Materials</a>
+                        <a class="dropdown-item" href="material.html" th:href="@{material}">Materials</a>
                         <a class="dropdown-item" th:text="#{finance.balance}" th:href="@{/finance}">Balance</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/users}">Nutzerverwaltung</a>
