--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,8 +12,6 @@
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
-<footer th:replace="fragments :: footer"></footer>
-
 <div class="container mt-md-5">
     <h1 th:text="#{users.registration.title}">Nutzerregistrierung</h1>
 
@@ -25,33 +23,33 @@
             <p>Einige Angaben sind nicht korrekt.</p>
         </div>
 
-        <div class="field">
+        <div class="form-group">
             <label for="firstName">Vorname</label>
-            <input id="firstName" name="firstName" th:field="*{firstName}" th:errorclass="fieldError" type="text" required="required"/><br/>
-            <div class="ui negative message" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">
+            <input class="form-control" id="firstName" name="firstName" th:field="*{firstName}" th:errorclass="fieldError" type="text" required="required"/><br/>
+            <div class="alert-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">
                 <p>Der Vorname darf nicht leer sein.</p>
             </div>
         </div>
 
-        <div class="field">
+        <div class="form-group">
             <label for="userName">Nachname</label>
-            <input id="lastName" name="lastName" th:field="*{lastName}" th:errorclass="fieldError" type="text" required="required"/><br/>
-            <div class="ui negative message" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">
+            <input class="form-control" id="lastName" name="lastName" th:field="*{lastName}" th:errorclass="fieldError" type="text" required="required"/><br/>
+            <div class="alert-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">
                 <p>Der Nachname darf nicht leer sein.</p>
             </div>
         </div>
 
-        <div class="field">
+        <div class="form-group">
             <label for="userName">Benutzername</label>
-            <input id="userName" name="userName" th:field="*{userName}" th:errorclass="fieldError" type="text" required="required"/><br/>
-            <div class="ui negative message" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">
+            <input class="form-control" id="userName" name="userName" th:field="*{userName}" th:errorclass="fieldError" type="text" required="required"/><br/>
+            <div class="alert-danger" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">
                 <p>Der Benutzername darf nicht leer sein.</p>
             </div>
         </div>
 
-        <div class="field">
+        <div class="form-group">
             <label th:text="#{users.registration.password}" for="password">Passwort</label>
-            <input id="password" name="password" th:field="*{password}" th:errorclass="fieldError" type="password"
+            <input class="form-control" id="password" name="password" th:field="*{password}" th:errorclass="fieldError" type="password"
                    required="required"/><br/>
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Das Passwort darf
                 nicht leer sein.</p>
@@ -59,17 +57,18 @@
 
         <ul>
             <li th:each="role : ${roles}">
-                <input th:type="radio" th:field="*{role}" th:value="${role}" required="required" />
+                <input class="form-check-input" th:type="radio" th:field="*{role}" th:value="${role}" required="required" />
                 <label th:for="${#ids.prev('role')}" th:text="${role.name()}">EMPLOYEE</label>
                 <p th:if="${#fields.hasErrors('role')}" th:errors="*{role}">Bitte wählen Sie eine der Optionen aus.</p>
             </li>
         </ul>
 
-        <button type="submit" class="btn btn-primary" th:text="#{users.registration.submit}">Registrieren</button>
+        <button class="btn btn-primary" type="submit" th:text="#{users.registration.submit}">Registrieren</button>
     </form>
 
 </div>
 
+<footer th:replace="fragments :: footer"></footer>
 
 <script crossorigin="anonymous"
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
