--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -49,6 +49,9 @@
                     <a class="nav-link" href="#" th:href="@{/login}" th:text="#{security.logout}">Logout</a>
                 </li>
             </ul>
+            <form class="form-inline" method="post" th:action="@{/forward}" sec:authorize="isAuthenticated()">
+                <button class="btn btn-outline-warning" type="submit" th:text="#{general.forward}">Forward</button>
+            </form>
         </div>
     </div>
 </nav>
