--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            <label for="userName">Nachname</label>
+            <label for="lastName">Nachname</label>
             <input class="form-control" id="lastName" name="lastName" th:field="*{lastName}" th:errorclass="fieldError" type="text" required="required"/><br/>
             <div class="alert-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">
                 <p>Der Nachname darf nicht leer sein.</p>
@@ -54,14 +54,6 @@
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Das Passwort darf
                 nicht leer sein.</p>
         </div>
-
-        <ul>
-            <li th:each="role : ${roles}">
-                <input class="form-check-input" th:type="radio" th:field="*{role}" th:value="${role}" required="required" />
-                <label th:for="${#ids.prev('role')}" th:text="${role.name()}">EMPLOYEE</label>
-                <p th:if="${#fields.hasErrors('role')}" th:errors="*{role}">Bitte wählen Sie eine der Optionen aus.</p>
-            </li>
-        </ul>
 
         <button class="btn btn-primary" type="submit" th:text="#{users.registration.submit}">Registrieren</button>
     </form>
