--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -28,13 +28,28 @@
                 <td th:text="${item.product.name}"></td>
                 <td th:text="${{item.quantity}}"></td>
                 <td>
-                    <form class="ui form" method="post" th:action="@{material/consume/{q}/{id}(id=${item.id},q=${item.quantity})}">
-                        <button class="btn btn-primary" role="button" >Verbrauchen</button>
+                    <form class="ui form" method="post" th:action="@{material/restock/{q}/{id}(id=${item.id},q=${item.quantity})}">
+                        <input type="hidden" name="pid" value="0"/>
+                        <div class="field">
+                            <label for="restockNumber">Menge: </label>
+                            <input id="restockNumber" type="number" name="restockNumber" min="1" step="1" value="1"/><br/>
+                        </div>
+                        <button  type="submit" class="ui labeled icon button">
+                            <span>Nachbestellen</span>
+                        </button>
                     </form>
 
-                    <form  class="ui form" method="post" th:action="@{material/restock/{q}/{id}(id=${item.id},q=${item.quantity})}">
-                        <button class="btn btn-secondary"  role="button">Nachbestellen</button>
+                    <form class="ui form" method="post" th:action="@{material/consume/{q}/{id}(id=${item.id},q=${item.quantity})}">
+                        <input type="hidden" name="pid" value="0"/>
+                        <div class="field">
+                            <label for="consumeNumber">Menge: </label>
+                            <input id="consumeNumber" type="number" name="consumeNumber" min="1" step="1" value="1"/><br/>
+                        </div>
+                        <button  type="submit" class="ui labeled icon button">
+                            <span>Verbrauchen</span>
+                        </button>
                     </form>
+
                 </td>
             </tr>
 
