adding/removing working for all metrics - still WIP

--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -32,7 +32,7 @@
                         <input type="hidden" name="pid" value="0"/>
                         <div class="field">
                             <label for="restockNumber">Menge: </label>
-                            <input id="restockNumber" type="number" name="restockNumber" min="1" step="1" value="1"/><br/>
+                            <input id="restockNumber" type="number" name="restockNumber" min="1" max="900" step="1" value="1"/><br/>
                         </div>
                         <button  type="submit" class="ui labeled icon button">
                             <span>Nachbestellen</span>
@@ -43,7 +43,7 @@
                         <input type="hidden" name="pid" value="0"/>
                         <div class="field">
                             <label for="consumeNumber">Menge: </label>
-                            <input id="consumeNumber" type="number" name="consumeNumber" min="1" step="1" value="1"/><br/>
+                            <input id="consumeNumber" type="number" name="consumeNumber" min="1" max="900" step="1" value="1" /><br/>
                         </div>
                         <button  type="submit" class="ui labeled icon button">
                             <span>Verbrauchen</span>
