--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="#" th:href="@{/login}" th:text="#{security.login}">Login</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="#" th:href="@{/login}" th:text="#{security.logout}">Logout</a>
+                    <a class="nav-link" href="#" th:href="@{/logout}" th:text="#{security.logout}">Logout</a>
                 </li>
             </ul>
             <form class="form-inline" method="post" th:action="@{/forward}" sec:authorize="isAuthenticated()">
