--- a/src/main/resources/templates/orderItem.html
+++ b/src/main/resources/templates/orderItem.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+           rel="stylesheet"  th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 
     <title>Bestellgegenstände</title>
 </head>
@@ -19,6 +19,7 @@
         <thead>
         <tr>
             <th scope="col">Gegenstand</th>
+
         </tr>
         </thead>
         <tbody>
@@ -32,14 +33,13 @@
 
 <footer th:replace="fragments :: footer"></footer>
 
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script crossorigin="anonymous"
-        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        th:src="@{/webjars/jquery/jquery.js}"></script>
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script crossorigin="anonymous"
-        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        th:src="@{/webjars/popper.js/umd/popper.js}"></script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script crossorigin="anonymous"
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
