refactoring basic function implementation

--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -35,7 +35,7 @@
         <button class="btn btn-outline-primary"  type="submit">Verbrauchen</button>
     </form>
 
-    <form class="input-group mb-3" method="post" th:action="@{material/restock}">
+    <form class="input-group mb-3" method="post" th:action="@{/material/restock}">
 
         <label>
             <select class="dropdown-menu-xl-right" name="material">
