--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -12,20 +12,17 @@
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
-
 <div class="container mt-md-5">
     <h1 th:text="#{finance.addItem.title}">Finance Item hinzufügen</h1>
 
     <form method="post" role="form" id="form" th:action="@{/finance/addItem}" th:object="${form}">
-
-        <h3 class="ui dividing header" th:text="#{finance.addItem.financedata}">FinanceData</h3>
 
         <div class="ui negative message" th:if="${#fields.hasErrors('*')}">
             <p>Einige Angaben sind nicht korrekt.</p>
         </div>
 
 
-        <div class="field">
+        <div class="form-group">
             <label for="price">Preis</label>
             <input id="price" name="price" th:field="*{price}" th:errorclass="fieldError" type="number" min="0.01" step="0.01" required="required"/><br/>
             <div class="ui negative message" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">
@@ -33,7 +30,7 @@
             </div>
         </div>
 
-        <div class="field">
+        <div class="form-group">
             <label for="description">Description</label>
             <input id="description" name="description" th:field="*{description}" th:errorclass="fieldError" type="text" required="required"/><br/>
             <div class="ui negative message" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">
